# aiserve-gpuproxyd

./: .env.example  .env.production  .gitignore  AGENT_PROTOCOLS.md  CHANGELOG.md  CUSTOMER_INFLUX_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FEATURES.md  GPU_RESERVATIONS.md  GRPC.md  GRPC_STATUS.md  GUARDRAILS.md  INTEGRATION.md  IP_ACCESS_CONTROL_SUMMARY.md  KUBERNETES_DEPLOYMENT.md  LICENSE  LOADBALANCING.md  MCP.md  Makefile  OCI_NETWORK_CONFIGURATION.md  PLATFORM_OVERHAUL.md  QUICKSTART.md  QUICK_START.md  README.md  WEB_OVERHAUL_COMPLETE.md  config.production-100k.toml  configure.py  docker-compose.external-db.yml  docker-compose.yml  go.mod  go.sum  init_db.sql  mcp-config.json
cmd/admin/: main.go
configs/: aiproxy-example.yaml  aiproxy-minimal.yaml
docs/: AGENT_SDK_INTEGRATION.md  AIPROXY_GETTING_STARTED.md  AIPROXY_STANDARD.md  AIPROXY_SUMMARY.md  AI_PLATFORM_ARCHITECTURE.md  API_MARKETPLACE_ARCHITECTURE.md  API_REFERENCE.md  CACHING_IMPLEMENTATION.md  DEPLOYMENT.md  ENTERPRISE_IMPROVEMENTS.md  FEATURES.md  GETTING_STARTED_TRAINING_PLATFORM.md  HYBRID_COMPUTE_ARCHITECTURE.md  IP_ACCESS_CONTROL.md  KEYCLOAK_SETUP.md  ML_RUNTIME_IMPLEMENTATION.md  N8N_INTEGRATION.md  OBSERVABILITY.md  OCI_STORAGE_AND_QUOTAS.md  PGBOUNCER_SETUP.md  PRODUCTION_100K.md  SIDECAR_DEPLOYMENT.md
examples/: README.md  grpc_reserve_gpus.go
helpers/: README.md
k8s/: Dockerfile.web  deploy.sh  deployment.yaml  hpa.yaml  nginx.conf
proto/: gpuproxy.pb.go  gpuproxy.proto  gpuproxy_grpc.pb.go
scripts/: aiproxy-quickstart.sh  test-mcp.sh
sdk/python/: README.md  pyproject.toml  setup.py
web/: README.md  app.js  index.html  styles.css
(+96 files in other folders)
