[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiserve"
version = "1.0.1"
description = "Official Python SDK for AIServe.Farm GPU Proxy and AI Model Inference Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AfterDark Systems", email = "support@afterdarksys.com"}
]
keywords = ["aiserve", "gpu", "inference", "ml", "ai", "model-serving", "pytorch", "onnx", "tensorflow", "mcp", "agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://aiserve.farm"
Documentation = "https://aiserve.farm/docs"
Repository = "https://github.com/straticus1/aiserve-gpuproxyd"
"Bug Tracker" = "https://github.com/straticus1/aiserve-gpuproxyd/issues"
